--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@ You should have  received a copy of the GNU  Lesser General Public License along
 with code. If not, see http://www.gnu.org/licenses/.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="altermarkive.uploader">
+    package="altermarkive.uploader" android:versionCode="1" android:versionName="1">
 
     <!-- Using the access to the Internet -->
     <uses-permission android:name="android.permission.INTERNET" />
