--- a/fall-detector/src/main/AndroidManifest.xml
+++ b/fall-detector/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--suppress DeprecatedClassUsageInspection -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="altermarkive.guardian" android:versionCode="1" android:versionName="1">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="altermarkive.guardian">
 
     <!-- Using network location provider -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -17,24 +17,32 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <!-- Using address book -->
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <!-- Using caller notification and identification -->
+    <!-- Using phone call monitoring -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!-- Using caller notification and identification -->
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <!-- Using phone call answer -->
+    <uses-permission android:name="android.permission.ANSWER_PHONE_CALLS" />
     <!-- Using bootstrap notification -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <!-- Using SMS receiving -->
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <!-- Using SMS sending -->
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <!-- Using foreground service -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app"
-        android:theme="@android:style/Theme.Light">
+        android:supportsRtl="false"
+        android:theme="@style/Theme.FallDetector">
         <activity
             android:name="altermarkive.guardian.About"
             android:label="@string/app"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -42,11 +50,13 @@
         </activity>
         <activity
             android:name="altermarkive.guardian.Settings"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name="altermarkive.guardian.Contact"
             android:label="@string/contact"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="altermarkive.guardian.Contact" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -58,16 +68,19 @@
             android:name="altermarkive.guardian.Boot"
             android:enabled="true"
             android:exported="true"
-            android:label="Boot Receiver">
+            android:label="Boot Receiver"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
         <receiver
             android:name="altermarkive.guardian.Messenger"
             android:enabled="true"
             android:exported="true"
-            android:label="SMS Responder">
+            android:label="SMS Responder"
+            android:permission="android.permission.BROADCAST_SMS">
             <intent-filter android:priority="2147483647">
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
@@ -76,7 +89,8 @@
             android:name="altermarkive.guardian.Telephony"
             android:enabled="true"
             android:exported="true"
-            android:label="Call Responder">
+            android:label="Call Responder"
+            android:permission="android.permission.MODIFY_PHONE_STATE">
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE" />
             </intent-filter>
@@ -91,4 +105,5 @@
             </intent-filter>
         </service>
     </application>
+
 </manifest>
