--- a/fall-detector/build.gradle
+++ b/fall-detector/build.gradle
@@ -33,4 +33,6 @@ android {
 }
 
 dependencies {
+    implementation "androidx.appcompat:appcompat:1.3.0"
+    implementation "com.google.android.material:material:1.3.0"
 }
