Modernized the UI & replaced the deprecated usage of preferences

--- a/fall-detector/src/main/AndroidManifest.xml
+++ b/fall-detector/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         android:supportsRtl="false"
         android:theme="@style/Theme.FallDetector">
         <activity
-            android:name="altermarkive.guardian.About"
+            android:name="altermarkive.guardian.Main"
             android:label="@string/app"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
