--- a/fall-detector/build.gradle
+++ b/fall-detector/build.gradle
@@ -34,5 +34,8 @@ android {
 
 dependencies {
     implementation "androidx.appcompat:appcompat:1.3.0"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
+    implementation "androidx.preference:preference-ktx:1.1.1"
     implementation "com.google.android.material:material:1.3.0"
 }
