--- a/tabs/src/main/AndroidManifest.xml
+++ b/tabs/src/main/AndroidManifest.xml
@@ -8,9 +8,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light">
-        <activity
-            android:name=".Main"
-            android:label="@string/app_name">
+        <activity android:name=".Main" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
