--- a/fall-detector/build.gradle
+++ b/fall-detector/build.gradle
@@ -3,6 +3,11 @@ plugins {
     id "kotlin-android"
 }
 
+def countCommits() {
+    def text = 'git rev-list --count HEAD'.execute().text.trim()
+    return text == '' ? 0 : text.toInteger()
+}
+
 android {
     compileSdkVersion 30
 
@@ -10,8 +15,8 @@ android {
         applicationId "altermarkive.guardian"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode countCommits()
+        versionName "0.1.0"
     }
 
     buildTypes {
@@ -34,8 +39,8 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "androidx.core:core-ktx:1.5.0"
-    implementation "androidx.appcompat:appcompat:1.3.0"
+    implementation "androidx.core:core-ktx:1.6.0"
+    implementation "androidx.appcompat:appcompat:1.3.1"
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation "androidx.vectordrawable:vectordrawable:1.1.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
@@ -43,5 +48,5 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
     implementation "androidx.preference:preference-ktx:1.1.1"
-    implementation "com.google.android.material:material:1.3.0"
+    implementation "com.google.android.material:material:1.4.0"
 }
