Prepared for tag-based versioning

--- a/fall-detector/build.gradle
+++ b/fall-detector/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 30
         versionCode countCommits()
-        versionName "0.1.0"
+        versionName '$TAG'
     }
 
     buildTypes {
