--- a/fall-detector/build.gradle
+++ b/fall-detector/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 30
         versionCode countCommits()
-        versionName '$TAG'
+        versionName "0.0.0"
     }
 
     buildTypes {
