--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Installing Java Development Kit
         uses: actions/setup-java@v2.1.0
         with:
+          distribution: 'zulu'
           java-version: 1.8
       - name: Building APK
         run: |
