Included round launcher icon

--- a/fall-detector/src/main/AndroidManifest.xml
+++ b/fall-detector/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/Theme.FallDetector">
         <activity
