--- a/fall-detector/build.gradle
+++ b/fall-detector/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
     implementation "androidx.preference:preference-ktx:1.1.1"
     implementation "com.google.android.material:material:1.4.0"
+    implementation group: 'com.github.ipfs', name: 'java-ipfs-http-client', version: 'v1.3.3'
 }
