Corrected the build automation to generate increasing versionCode

--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: Initiating
         uses: actions/checkout@v2.3.4
+        with:
+          fetch-depth: 0
       - name: Establishing Version
         id: version
         run: echo ::set-output name=version::${GITHUB_REF#refs/*/}
